finalized before video?

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo.png">
+
+  <script src="https://kit.fontawesome.com/your-fontawesome-kit-code.js" crossorigin="anonymous"></script>
   <title>Farm Dashboard</title>
 </head>
 <body>
