--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo.png">
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/farmlogo.jpg">
 
   <script src="https://kit.fontawesome.com/your-fontawesome-kit-code.js" crossorigin="anonymous"></script>
   <title>Farm Dashboard</title>
